--- a/index.html
+++ b/index.html
@@ -159,13 +159,16 @@
 			<br />
 			<p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br /></p>
-			<br />
+			<div class="buildn">
+				/build 0.8.0.0
+			</div>
 		</div>
 
 		<div class="footer visible-xs">
 			<br />
 			<p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br /></p>
+			<br />
+		</p>
 
 		</div>
 	</footer><!--End footer-->
