Fixed Results Page

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			<p> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br /></p>
 			<div class="buildn">
-				/build 0.8.0.0
+				/build 0.8.0.1
 			</div>
 		</div>
 
@@ -169,7 +169,9 @@
 			<p class="small-footer"> Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
 			<br />
 		</p>
-
+		<div class="buildn">
+			/build 0.8.0.1
+		</div>
 		</div>
 	</footer><!--End footer-->
 </html>
