--- a/results.html
+++ b/results.html
@@ -113,38 +113,38 @@
 				<br />
 				<br />
 				<br />
-				<h2>Schedule</h2>
+				<h2>2015 Results</h2>
 			</div> <!-- #col-sm-6 -->
 		</div> <!-- #container -->
 		<div class="table-responsive">
 		<table class="table">
 			<thead>
 				<tr>
-					<th>Time</th>
-					<th>Event</th>
-					<th> </th>
+					<th>Name</th>
+					<th>Place</th>
+					<th></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
-					<td>6:00AM</td>
-					<td>Event Start</td>
-					<td>Get Fishing!</td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td>11:00AM</td>
-					<td>Weigh-in Start</td>
-					<td> </td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td>1:00PM</td>
-					<td>Weigh-in End</td>
-					<td>Will not accept fish past this time!</td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 				<tr>
-					<td>3:00PM</td>
-					<td>Event End</td>
-					<td>Thank you for attending The Jigs Up Ice Fishing Event</td>
+					<td></td>
+					<td></td>
+					<td></td>
 				</tr>
 			</tbody>
 		</table>
