--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			</div> <!-- #carousel  -->
 			<div class="text-center">
 				</br>
-				<h1><b>3rd Annual "The Jig's Up" Ice Fishing Contest<b></h1>
+				<h1 class="headers"><b>3rd Annual "The Jig's Up" Ice Fishing Contest<b></h1>
 				</br>
 			</div>
 		</section>
@@ -117,15 +117,15 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
-						<h3><b>When:</b> Saturday, February 13; 7am-2pm</h3>
-						<h3><b>Where:</b> The Edge Pub &amp; Eatery on Lake Wissota</h3>
-						<h3><b>Fish Tickets:</b> $25, one ticket required for each fish registered</h3>
+						<h3><b class="headers">When:</b> Saturday, February 13; 7am-2pm</h3>
+						<h3><b class="headers">Where:</b> The Edge Pub &amp; Eatery on Lake Wissota</h3>
+						<h3><b class="headers">Fish Tickets:</b> $25, one ticket required for each fish registered</h3>
 						<blockquote>
 							Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight
 							and every 5th place thereafter to the 400th place so even a small fish can wing big! All prizes will be distributed at the event,
 							regardless of the number of fish registered.
 						</blockquote>
-						<h3><b>Raffle Tickets:</b> $5 each or $20 for 5  </h3>
+						<h3><b class="headers">Raffle Tickets:</b> $5 each or $20 for 5  </h3>
 						<blockquote>
 							$7,500 in prizes including a 2014 Polarois Sportsman 4-wheeler
 						</blockquote>
@@ -136,7 +136,7 @@
 					<div class="col-sm-6">
 						<br />
 						<div class="videowrapper">
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/95s8jg9LrCk" frameborder="0" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/UsUAM8JMG4c?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 						</div>
 					</div> <!-- #col-sm-6  -->
 				</div> <!-- #row  -->
