--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
 								<li role="presentation" class="divider"></li>
 								<li><a href="sponsors.html">Sponsors</a></li>
 								<li role="presentation" class="divider"></li>
-								<li><a href="lakeWissota.html">Lake Wissota</a></li>
-								<li role="presentation" class="divider"></li>
 								<li><a href="results.html">Results</a></li>
 							</ul>
 						</li>
@@ -119,6 +117,10 @@
 					<div class="col-sm-6">
 						<h3><b class="headers">When:</b> Saturday, February 13; 7am-2pm</h3>
 						<h3><b class="headers">Where:</b> The Edge Pub &amp; Eatery on Lake Wissota</h3>
+						<blockquote>
+						Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls.
+						It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include Musky, Panfish, Largemouth Bass, Smallmouth Bass, Northern Pike, Walleye, Sturgeon and Catfish.
+					</blockquote>
 						<h3><b class="headers">Fish Tickets:</b> $25, one ticket required for each fish registered</h3>
 						<blockquote>
 							Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight
@@ -130,7 +132,7 @@
 							$7,500 in prizes including a 2014 Polarois Sportsman 4-wheeler
 						</blockquote>
 						<p><i>Food and beverages wil be available in the heated tent. Parking will be available at The Edge Pub &amp; Eatery on the ice. All state regulations
-							and bag limits apply to this rule and no person may bring in more than the legal limit of fish allowed, whih for this contest includes, northern,
+							and bag limits apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern,
 							walleye, pan fish (perch, bluegills, crappies), and bass.</i></p>
 					</div> <!-- #col-sm-6  -->
 					<div class="col-sm-6">
