--- a/lakeWissota.html
+++ b/lakeWissota.html
@@ -115,7 +115,7 @@
 				<h2>Lake Wissota</h2>
 				<p>
 					Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls.
-					It covers an area of 6,024 acres (2,438 ha) and has a maximum depth of 72 feet (22 m).
+					It covers an area of 6,148 acres (2,438 ha) and has a maximum depth of 64.4 feet (22 m). Fish include Musky, Panfish, Largemouth Bass, Smallmouth Bass, Northern Pike, Walleye, Sturgeon and Catfish
 				</p>
 				<p>
 					Lake Wissota is surrounded on the south by the town of Lafayette, on the north and east by the town of Anson, and on the west by the town of Eagle Point.
