--- a/schedule.html
+++ b/schedule.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Jigs Up | Schedule</title>
+		<title>Jigs Up | Home</title>
 
 		<!-- Bootstrap -->
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
@@ -17,8 +17,6 @@
 		  <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-
-
 
 		<!-- FAVICON -->
 		<link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -39,9 +37,6 @@
 		<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
 
-
-
-
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 			<div class="container">
 				<!-- Brand and toggle get grouped for better mobile display -->
@@ -61,41 +56,22 @@
 						<li class="dropdown">
 							<a class="dropdown-toggle navcol" data-toggle="dropdown" href="#">Event<span class="caret"></span></a>
 							<ul class="dropdown-menu">
-								<li>
-									<a href="directions.html">Directions</a>
-								</li>
-								<li>
-									<a href="schedule.html">Schedule</a>
-								</li>
-								<li>
-									<a href="prizes.html">Prizes</a>
-								</li>
-								<li>
-									<a href="sponsors.html">Sponsors</a>
-								</li>
-								<li>
-									<a href="lakeWissota.html">Lake Wissota</a>
-								</li>
-								<li>
-									<a href="results.html">Results</a>
-								</li>
+								<li><a href="directions.html">Directions</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="schedule.html">Schedule</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="prizes.html">Prizes</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="sponsors.html">Sponsors</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="results.html">Results</a></li>
 							</ul>
 						</li>
-						<li class="navcol">
-							<a href="register.html">Register</a>
-						</li>
-						<li class="navcol">
-							<a href="contact.html">Contact</a>
-						</li>
-						<li class="social-media">
-						   <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a>
-						</li>
-							<li>
-						   <a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a>
-						</li>
-						<li>
-						   <a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/"> <img src="images/instagram.png" class="fbook"</img></a>
-						</li>
+						<li class="navcol"><a href="register.html">Register</a></li>
+						<li class="navcol"><a href="contact.html">Contact</a></li>
+						<li class="social-media"><a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a></li>
+						<li><a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a></li>
+						<li><a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/"> <img src="images/instagram.png" class="fbook"</img></a></li>
 					</ul>
 				</div>
 				<!-- /.navbar-collapse -->
