--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			</div> <!-- #carousel  -->
 			<div class="text-center">
 				</br>
-				<h1 class="headers"><b>3rd Annual "The Jig's Up" Ice Fishing Contest<b></h1>
+				<h1 class="headers">3rd Annual "The Jig's Up" Ice Fishing Contest</h1>
 				</br>
 			</div>
 		</section>
@@ -115,19 +115,19 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
-						<h3><b class="headers">When:</b> Saturday, February 13; 7am-2pm</h3>
-						<h3><b class="headers">Where:</b> The Edge Pub &amp; Eatery on Lake Wissota</h3>
+						<h3 class="headers">When:</h3> <h4>Saturday, February 13; 7am-2pm</h4> <br /> <br />
+						<h3 class="headers">Where:</h3> <h4> The Edge Pub &amp; Eatery on Lake Wissota </h4>
 						<blockquote>
 						Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls.
 						It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include Musky, Panfish, Largemouth Bass, Smallmouth Bass, Northern Pike, Walleye, Sturgeon and Catfish.
 					</blockquote>
-						<h3><b class="headers">Fish Tickets:</b> $25, one ticket required for each fish registered</h3>
+						<h3 class="headers">Fish Tickets:</h3> <h4>$25, one ticket required for each fish registered </h4>
 						<blockquote>
 							Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight
 							and every 5th place thereafter to the 400th place so even a small fish can wing big! All prizes will be distributed at the event,
 							regardless of the number of fish registered.
 						</blockquote>
-						<h3><b class="headers">Raffle Tickets:</b> $5 each or $20 for 5  </h3>
+						<h3 class = "headers">Raffle Tickets:</h3> <h4>$5 each or $20 for 5 </h4>
 						<blockquote>
 							$7,500 in prizes including a 2014 Polarois Sportsman 4-wheeler
 						</blockquote>
