--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
 				<form id="contact_form" action="http://formspree.io/recreation@uwec.edu" method="POST" onsubmit="return validateForm();" enctype="multipart/form-data">
 					<div class="row">
 						<div class="col-sm-12">
-							<h2>Have any questions? Send us a message!</h2>
+							<h2 class="headers">Contact Us!</h2>
 							<label class="required" for="name">Your name:</label><br />
 							<input id="name" name="name" type="text" value="" size="30" /><br />
 							<span id="name_validation" class="error"></span>
