--- a/register.html
+++ b/register.html
@@ -89,7 +89,8 @@
 
 <section id="content">
 	<div class="container">
-	<h2>Register Here!</h2>
+	<h2 class="headers">Register Here!</h2>
+	<br />
 		<div style="width:100%; text-align:left;" >
 			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="300" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
 		</div> <!-- #(eventbrite) -->
