--- a/schedule.html
+++ b/schedule.html
@@ -90,7 +90,7 @@
 				<br />
 				<br />
 				<br />
-				<h2>Schedule</h2>
+				<h2 class ="headers">Schedule</h2>
 			</div> <!-- #col-sm-6 -->
 		</div> <!-- #container -->
 		<div class="table-responsive">
