--- a/directions.html
+++ b/directions.html
@@ -89,7 +89,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-8">
-					<h1>Directions</h1>
+					<h2 class = "headers">Directions</h2>
 					<h2></h2>
 				</div> <!-- #col-sm-8  -->
 			</div> <!-- #row  -->
