--- a/sponsors.html
+++ b/sponsors.html
@@ -88,7 +88,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<h1 class="page-header">Sponsors</h1>
+					<h2 class="headers">Sponsors</h2>
 				</div> <!-- #col-lg-12 -->
 				<div class="col-lg-3 col-md-4 col-xs-6 thumb">
 					<a class="lightbox" href="images/beach.jpg">
