--- a/contact.html
+++ b/contact.html
@@ -94,20 +94,20 @@
 						<div class="col-sm-12">
 							<h2 class="headers">Contact Us!</h2>
 							<label class="required" for="name">Your name:</label><br />
-							<input id="name" name="name" type="text" value="" size="30" /><br />
-							<span id="name_validation" class="error"></span>
+							<input required id="name" name="name" type="text" value="" size="30" /><br />
+
 
 							<label class="required" for="email">Your email:</label><br />
-							<input id="email" name="email" type="text" value="" size="30" /><br />
-							<span id="email_validation" class="error"></span>
+							<input required type="email"  id="email" name="email" type="text" value="" size="30" /><br />
+
 
 							<label for="phone">Your phone number:</label><br />
-							<input id="phone" name="phone" type="text" value="" size="30" /><br />
+							<input  id="phone" name="phone" type="text" value="" size="30" /><br />
 
 							<label class="required" for="message">Your message:</label><br />
-							<textarea id="message" name="message" rows="7" cols="30"></textarea><br />
-							<span id="message_validation" class="error"></span>
-							<input type="submit" value="Send email" />
+							<textarea required id="message" name="message" rows="7" cols="60"></textarea><br />
+
+							<input type="submit" value="Send" />
 						</div> <!-- #col  -->
 					</div> <!-- #row -->
 				</form> <!-- #contact_form  -->
