--- a/index.html
+++ b/index.html
@@ -115,25 +115,30 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-6">
-						<h3 class="headers">When:</h3> <h4>Saturday, February 13; 7am-2pm</h4> <br /> <br />
-						<h3 class="headers">Where:</h3> <h4> The Edge Pub &amp; Eatery on Lake Wissota </h4>
+						<h3 class="headers">When:</h3> <h4>Saturday, February 13, 2016; 7am-2pm</h4> <br /> <br />
 						<blockquote>
+						 No need to check in, will-call tickets purchased on-line will be available for pick up at The View starting at 6:30am.
+					</blockquote>
+						<h3 class="headers">Where:</h3> <h4> Lake Wissota</h4>
+						<blockquote>
+							<b>Weigh-In Stations:</b> The Edge Pub & Eatery and Gordy's County Market on "Little Lake Wissota" <br />
+							<b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes <br /> <br />
 						Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls.
 						It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include Musky, Panfish, Largemouth Bass, Smallmouth Bass, Northern Pike, Walleye, Sturgeon and Catfish.
+						For this contest, only Northern, Walleye, Panish (Perch, Bluegills, Crappies), and Bass will be considered
 					</blockquote>
 						<h3 class="headers">Fish Tickets:</h3> <h4>$25, one ticket required for each fish registered </h4>
 						<blockquote>
 							Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight
-							and every 5th place thereafter to the 400th place so even a small fish can wing big! All prizes will be distributed at the event,
-							regardless of the number of fish registered.
+							and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event,
+							regardless of the number of fish registered so hold on to your Fish Tickets.
 						</blockquote>
 						<h3 class = "headers">Raffle Tickets:</h3> <h4>$5 each or $20 for 5 </h4>
 						<blockquote>
-							$7,500 in prizes including a 2014 Polarois Sportsman 4-wheeler
+							$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
 						</blockquote>
-						<p><i>Food and beverages wil be available in the heated tent. Parking will be available at The Edge Pub &amp; Eatery on the ice. All state regulations
-							and bag limits apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern,
-							walleye, pan fish (perch, bluegills, crappies), and bass.</i></p>
+						<p><i>The Wissota Lions Club will have food and beverages available on the ice. Parking will be available at The View, The Edge, and on the ice. All state regulations and bag limits
+							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, Northern, Walleye, Panfish (Perch, Bluegills, Crappies), and Bass.</i></p>
 					</div> <!-- #col-sm-6  -->
 					<div class="col-sm-6">
 						<br />
