--- a/register.html
+++ b/register.html
@@ -99,8 +99,8 @@
 <section>
 	<div class="container">
 			<div>
-					<h3>Tickets can also be purchased at:
-					<ul>
+					<h3 class="headers">Tickets can also be purchased at: </h3>
+					<ul class="list">
 						<li>Scheels</li>
 						<li>Mega Foods West and East, and the new Barron location</li>
 						<li>Mega Holiday Stations in Chippewa Falls</li>
