--- a/contact.html
+++ b/contact.html
@@ -107,7 +107,8 @@
 							<label class="required" for="message">Your message:</label><br />
 							<textarea required id="message" name="message" rows="7" cols="60"></textarea><br />
 
-							<input type="submit" value="Send" />
+							<button type="submit" class="btn btn-primary" value="Send">Send</button>
+
 						</div> <!-- #col  -->
 					</div> <!-- #row -->
 				</form> <!-- #contact_form  -->
