--- a/schedule.html
+++ b/schedule.html
@@ -114,7 +114,7 @@
 				</tr>
 				<tr>
 					<td>2:00PM</td>
-					<td>Weigh-in Closed for registering fish</td>
+					<td>Weigh-in Stations close</td>
 					<td></td>
 				</tr>
 				<tr>
