--- a/register.html
+++ b/register.html
@@ -102,11 +102,13 @@
 					<h3 class="headers">Tickets can also be purchased at: </h3>
 					<ul class="list">
 						<li>Scheels</li>
-						<li>Mega Foods West and East, and the new Barron location</li>
-						<li>Mega Holiday Stations in Chippewa Falls</li>
-						<li>UWEC McPHee Infomation Office, 8:00am-4:30pm</li>
-						<li>UWEC HIlltop Recreation Center Office, 8:00am-4:30pm</h3></li>
+						<li>The View at Lake Wissota</li>
+						<li>The Edge Pub & Eatery on Lake Wissota</li>
+						<li>Gordy’s County Market select locations*/li>
+						<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3></li>
+						<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3></li>
 					</ul>
+					*Gordy’s County Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
 			</div>
 	</div>
 </section>
