--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 							<b>Weigh-In Stations:</b> The Edge Pub & Eatery and Gordy's County Market on "Little Lake Wissota" <br />
 							<b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes <br /> <br />
 						Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls.
-						It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include Musky, Panfish, Largemouth Bass, Smallmouth Bass, Northern Pike, Walleye, Sturgeon and Catfish.
-						For this contest, only Northern, Walleye, Panish (Perch, Bluegills, Crappies), and Bass will be considered
+						It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include musky, panfish, largemouth nass, smallmouth bass, northern pike, walleye, sturgeon and catfish.
+						For this contest, only northern, walleye, panfish (perch, bluegills, crappies), and bass will be considered
 					</blockquote>
 						<h3 class="headers">Fish Tickets:</h3> <h4>$25, one ticket required for each fish registered </h4>
 						<blockquote>
@@ -138,7 +138,7 @@
 							$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
 						</blockquote>
 						<p><i>The Wissota Lions Club will have food and beverages available on the ice. Parking will be available at The View, The Edge, and on the ice. All state regulations and bag limits
-							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, Northern, Walleye, Panfish (Perch, Bluegills, Crappies), and Bass.</i></p>
+							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i></p>
 					</div> <!-- #col-sm-6  -->
 					<div class="col-sm-6">
 						<br />
