--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 				</ol>
 				<div class="carousel-inner">
 					<div class="item active">
-						<a href="#"><img src="images/slider/slide2.png" /></a>
+						<a href="#"><img src="images/slider/slide2.jpg" /></a>
 					</div>
 					<div class="item">
-						<a href="#"><img src="images/slider/slide1.png" /></a>
+						<a href="#"><img src="images/slider/slide1.jpg" /></a>
 					</div>
 					<div class="item">
-						<a href="#"><img src="images/slider/slide3.png" /></a>
+						<a href="#"><img src="images/slider/slide3.jpg" /></a>
 					</div>
 				</div> <!-- #carousel-inner  -->
 
