--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <li><a href="results.html">Results</a></li>
             </ul>
           </li>
-          <li class="navcol"><a href="register.html">Register</a></li>
+          <li class="navcol"><a href="tickets.html">Tickets</a></li>
           <li class="navcol"><a href="contact.html">Contact</a></li>
           <li class="social-media">
             <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
@@ -131,7 +131,8 @@
     <!-- #carousel  -->
     <div class="text-center">
       </br>
-      <h1 class="headers">3rd Annual "The Jig's Up" Ice Fishing Contest</h1>
+      <h1 class="headers">3rd Annual Jigs Up Ice Fishing Contest</h1>
+        <h5 class="headers">Presented by Blugold Recreation, Blugold Booster Club, and the Lake Wissota Lions Club</h5>
       </br>
     </div>
   </section>
@@ -152,22 +153,18 @@
             <b>Weigh-In Stations:</b> The Edge Pub & Eatery and Gordy's County Market on "Little Lake Wissota"
             <br />
             <b>Prize Distribution:</b> The View on Lake Wissota, 3pm Raffle Prizes, 4pm Fish Prizes
-            <br />
-            <br /> Lake Wissota is a reservoir in Chippewa County, Wisconsin, United States, just east of the city of Chippewa Falls. It covers an area of 6,148 acres and has a maximum depth of 64.4 feet. Fish include musky, panfish, largemouth nass, smallmouth
-            bass, northern pike, walleye, sturgeon and catfish. For this contest, only northern, walleye, panfish (perch, bluegills, crappies), and bass will be considered
+
           </blockquote>
-          <h3 class="headers">Fish Tickets:</h3>
-          <h4>$25, one ticket required for each fish registered </h4>
+
+          <h3 class="headers">New This Year:</h3>
+          <h4> Scheels Kids Ice Fishing Clinic</h4>
           <blockquote>
-            Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
-            of the number of fish registered so hold on to your Fish Tickets.
+Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, February 12. Space is limited, sign up at
+ Scheels. Learn new skills and try them out on the ice on February 13 in the Kid’s Klub area. Gear provided, free for children to participate, must purchase a Fish ticket to register a fish.
+
           </blockquote>
-          <h3 class="headers">Raffle Tickets:</h3>
-          <h4>$5 each or $20 for 5 </h4>
-          <blockquote>
-            $7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
-          </blockquote>
-          <p><i>The Wissota Lions Club will have food and beverages available on the ice. Parking will be available at The View, The Edge, and on the ice. All state regulations and bag limits
+
+          <p><i>The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
 							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i></p>
         </div>
         <!-- #col-sm-6  -->
