--- a/tickets.html
+++ b/tickets.html
@@ -67,7 +67,7 @@
 								<li><a href="results.html">Results</a></li>
 							</ul>
 						</li>
-						<li class="navcol"><a href="register.html">Register</a></li>
+						<li class="navcol"><a href="tickets.html">Tickets</a></li>
 						<li class="navcol"><a href="contact.html">Contact</a></li>
 						<li class="social-media"><a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a></li>
 						<li><a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a></li>
@@ -91,6 +91,18 @@
 	<div class="container">
 	<h2 class="headers">Register Here!</h2>
 	<br />
+	<h4 class="headers">Fish Tickets:</h4>
+	<h4>$25, one ticket required for each fish registered </h4>
+	<blockquote>
+		Over $30,000 in cash and prizes including a 2015 Ice Castle Scout. Prizes awarded to the top 25 fish by weight and every 5th place thereafter to the 300th place so even a small fish can win big! All prizes will be distributed at the event, regardless
+		of the number of fish registered so hold on to your Fish Tickets.
+	</blockquote>
+	<h4 class="headers">Raffle Tickets:</h4>
+	<h4>$5 each or $20 for 5 </h4>
+	<blockquote>
+		$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
+	</blockquote>
+	<br />
 		<div style="width:100%; text-align:left;" >
 			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="300" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
 		</div> <!-- #(eventbrite) -->
@@ -99,17 +111,25 @@
 <section>
 	<div class="container">
 			<div>
+
 					<h3 class="headers">Tickets can also be purchased at: </h3>
 					<ul class="list">
 						<li>Scheels</li>
 						<li>The View at Lake Wissota</li>
 						<li>The Edge Pub & Eatery on Lake Wissota</li>
-						<li>Gordy’s County Market select locations*/li>
+						<li>Gordy’s County Market select locations*</li>
 						<li>UWEC McPhee Information Office, 8:00am-4:30pm, Monday - Friday</h3></li>
 						<li>UWEC Hilltop Recreation Center Office, 8:00am-4:30pm, Monday - Friday</h3></li>
 					</ul>
 					*Gordy’s County Market Store Locations:  Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC), Hamilton (EC), Clairemont (EC), Rice Lake, Ladysmith, Cornell, Chetek, Augusta
-			</div>
+		<br />
+	<br />
+	<br />
+<br />
+<br />
+<br />
+<br />
+<br /></div>
 	</div>
 </section>
 
