--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 								<li><a href="results.html">Results</a></li>
 							</ul>
 						</li>
-						<li class="navcol"><a href="register.html">Register</a></li>
+						<li class="navcol"><a href="tickets.html">Tickets</a></li>
 						<li class="navcol"><a href="contact.html">Contact</a></li>
 						<li class="social-media"><a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522"> <img src="images/facebook.png" class ="fbook"</img></a></li>
 						<li><a target="_blank" class="twitter" href="https://twitter.com/uwecrecreation"> <img src="images/twitter.png" class="twitter"</img></a></li>
