--- a/directions.html
+++ b/directions.html
@@ -73,7 +73,7 @@
               <li><a href="results.html">Results</a></li>
             </ul>
           </li>
-          <li class="navcol"><a href="register.html">Register</a></li>
+          <li class="navcol"><a href="tickets.html">Tickets</a></li>
           <li class="navcol"><a href="contact.html">Contact</a></li>
           <li class="social-media">
             <a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
