Ryan-Committee Members

--- a/tickets.html
+++ b/tickets.html
@@ -102,6 +102,12 @@
 	<blockquote>
 		$7,500 in prizes including a 2015 Polaris Sportsman 4-wheeler
 	</blockquote>
+
+	<h4 class="headers">Availability:</h4>
+	<h4>Tickets available until 9pm on Friday, February 12th. Tickets will be available on the ice for $40 until 9am. </h4>
+	<blockquote>
+		Tickets purchased on-line by noon on Friday, February 5 will be mailed via USPS. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
+	</blockquote>
 	<br />
 		<div style="width:100%; text-align:left;" >
 			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="300" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
