--- a/contact.html
+++ b/contact.html
@@ -91,8 +91,9 @@
 			<div class="contactForm"> <!-- SPACING ISSUES WITH BUTTON AND HEADER -->
 				<form id="contact_form" action="http://formspree.io/recreation@uwec.edu" method="POST" onsubmit="return validateForm();" enctype="multipart/form-data">
 					<div class="row">
-						<div class="col-sm-12">
-							<h2 class="headers">Contact Us!</h2>
+						<div class="col-md-6">
+							<h3 class="headers">Contact Us!</h3>
+							<br /> <br />
 							<label class="required" for="name">Your name:</label><br />
 							<input required id="name" name="name" type="text" value="" size="30" /><br />
 
@@ -110,10 +111,93 @@
 							<button type="submit" class="btn btn-primary" value="Send">Send</button>
 
 						</div> <!-- #col  -->
+
+						<div class="col-md-6">
+<div class="visible-sm visible-xs">
+	<br />
+</div>
+	<h3 class="headers">Committee Members</h3>
+<br /> <br />
+	<div class="table-responsive">
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Name</th>
+					<th>Organization</th>
+		</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Tammy Brunschmid</td>
+					<td>Blugold Recreation</td>
+					</tr>
+					<tr>
+						<td>Bill Cunningham</td>
+						<td>Wissota Lions Club</td>
+						</tr>
+						<tr>
+							<td>Chuck Daly</td>
+							<td>Wissota Lions Club</td>
+							</tr>
+							<tr>
+								<td>Ben Halder</td>
+								<td>Blugold Athletics</td>
+								</tr>
+								<tr>
+									<td>Andy Jepsen</td>
+									<td>Blugold Recreation</td>
+									</tr>
+									<tr>
+										<td>Jill Millis</td>
+										<td>Blugold Athletics</td>
+										</tr>
+										<tr>
+											<td>Carl Mothes</td>
+											<td>Wissota Lions Club</td>
+											</tr>
+											<tr>
+												<td>Sheryl Poirier</td>
+												<td>Blugold Recreation</td>
+												</tr>
+												<tr>
+													<td>Dave Prescher</td>
+													<td>Wissota Lions Club</td>
+													</tr>
+													<tr>
+														<td>Dave Prescher</td>
+														<td>Wissota Lions Club</td>
+														</tr>
+														<tr>
+															<td>Dan Schumacher</td>
+															<td>Blugold Athletics</td>
+															</tr>
+															<tr>
+																<td>Troy Terhark</td>
+																<td>Blugold Recreation</td>
+																</tr>
+																<tr>
+																	<td>Al Wiberg</td>
+																	<td>Blugold Recreation</td>
+																	</tr>
+
+
+
+						          </tbody>
+						        </table>
+						</div>
+<br />
+
 					</div> <!-- #row -->
 				</form> <!-- #contact_form  -->
 			</div>  <!-- #contactForm  -->
 		</div> <!-- #container  -->
+<br />
+<br />
+<br />
+<br />
+
+
+
 	</section>  <!-- #contactForm  -->
 
 
