--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@ Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, Februar
           </blockquote>
 
           <p><i>The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
-							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i></p>
+							apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest includes, northern, walleye, panfish (perch, bluegills, crappies), and bass.</i>
+<br />
+<br />
+            <a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
         </div>
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
