--- a/tickets.html
+++ b/tickets.html
@@ -108,14 +108,13 @@
 	<blockquote>
 		Tickets purchased on-line by noon on Friday, February 5 will be mailed via USPS. After February 5 they will be available for pick up at The View starting at 6:30am on February 13.
 	</blockquote>
+
+	  <a class="rules" target="_blank" href="images/rules.pdf">Rules</a>  </p>
 	<br />
 		<div style="width:100%; text-align:left;" >
-			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="300" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
+			<iframe src="http://www.eventbrite.com/tickets-external?eid=4653432542&ref=etckt&v=2" frameborder="0" height="250" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="no" allowtransparency="true"></iframe>
 		</div> <!-- #(eventbrite) -->
-	</div>
-</section>
-<section>
-	<div class="container">
+
 			<div>
 
 					<h3 class="headers">Tickets can also be purchased at: </h3>
@@ -136,7 +135,7 @@
 <br />
 <br />
 <br /></div>
-	</div>
+
 </section>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
