--- a/directions.html
+++ b/directions.html
@@ -135,7 +135,7 @@
         </a>
         <div id="collapse1" class="panel-collapse collapse ">
           <div class="panel-body">
-            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Gordys%20County%20Market%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
+            <iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
             allowfullscreen></iframe>
           </div>
         </div>
