--- a/schedule.html
+++ b/schedule.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta content="width=device-width, initial-scale=1" name="viewport">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>Jigs Up | Home</title>
 
@@ -101,7 +102,7 @@
   <section id="content">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-xs-6">
           <br />
           <br />
           <br />
