Update Directions Page
I added an image that shows all three locations on the map.

--- a/directions.html
+++ b/directions.html
@@ -106,7 +106,7 @@
   <section id="directionsHeader">
     <div class="container">
       <div class="row">
-        <div class="col-sm-8">
+        <div class="col-sm-6">
           <h2 class="headers">Directions</h2>
           <br />
         </div>
@@ -119,10 +119,10 @@
 
 
 
-  <div class="container ">
+  <div class="container">
 
 
-    <div class="panel-group" id="accordion">
+    <div class="panel-group col-md-6" id="accordion">
 
       <div class="panel panel-default ">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
@@ -171,6 +171,12 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <div class = "col-md-6">
+
+      <img src="images/Map.png" class="img-responsive" alt="Lake Wissota Map">
+
     </div>
   </div>
 
