--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.png" /> </a>
+          <img src="images/logo2.png" /> </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -206,7 +206,7 @@ Scheels Kids Klub will offer an ice fishing clinic at Scheels on Friday, Februar
       <br />
     </p>
     <div class="buildn">
-      /build 0.8.5.0
+      /build 0.8.6.0
     </div>
   </div>
 
