--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="description" content="UW-Eau Claire Blugold and Lake Wissota Lions Club ice fishing contest on Lake Wissota, Wisconsin.">
-   <meta name="keywords" content="Jigs, UP, UW-Eau Claire, Blugolds, UWEC, REcreation, Lions">
+   <meta name="keywords" content="Jigs, UP, UW, Eau, Claire, Blugolds, UWEC, Recreation, Lions">
   <meta name="google-site-verification" content="xUZPrgS-phrSLmBwygrSX_erJevxGxg1AG6Dubw3fY4" />
 
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
