Changed Logo on All Pages
Switched Logo to new one

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo2.png" /> </a>
+          <img src="images/logo.png" /> </a>
         <!-- Logo top aligns with navbar text top. -->
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
